--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/controleestoque
-PORT=5000
+MONGO_URI=mongodb+srv://marysouzarj:Ma132880@servidormdb.uk10z.mongodb.net/controleestoque?retryWrites=true&w=majority
+PORT=5001
